#10 Address review comments on data_storage.md, create sub-page for nczarr testing and update ToC

--- a/BigData/_toc.yml
+++ b/BigData/_toc.yml
@@ -3,6 +3,8 @@
 #
 - file: goals
 - file: data_storage
+  sections:
+  - file : nczarr_test
 - file: format_metadata
 - file: accessing_data
 - file: computations
