--- a/BigData/_toc.yml
+++ b/BigData/_toc.yml
@@ -1,12 +1,23 @@
-# Table of content
-# Learn more at https://jupyterbook.org/customize/toc.html
-#
-- file: goals
-- file: data_storage
-  sections:
-  - file : nczarr_test
-- file: format_metadata
-- file: accessing_data
-- file: computations
-- file: different_tools.md
-- file: resources.md
+format: jb-book
+root: goals
+parts:
+  - caption: Storage methods for large datasets
+    chapters:
+    - file: data_storage
+      sections:
+      - file : nczarr_test
+  - caption: Data formats and metadata
+    chapters:
+    - file: format_metadata   
+  - caption: Methods of accessing data and metadata
+    chapters:
+    - file: accessing_data       
+  - caption: Computations with large datasets
+    chapters:
+    - file: computations     
+  - caption: Available tools
+    chapters:
+    - file: different_tools   
+  - caption: Resources
+    chapters:
+    - file: resources  
