--- a/BigData/_toc.yml
+++ b/BigData/_toc.yml
@@ -1,18 +1,19 @@
 format: jb-book
-root: goals
+root: intro
 parts:
-  - caption: Storage methods for large datasets
+  - file: goals
+  - caption: Data storage
     chapters:
     - file: data_storage
       sections:
       - file : nczarr_test
-  - caption: Data formats and metadata
+  - caption: Metadata
     chapters:
     - file: format_metadata   
-  - caption: Methods of accessing data and metadata
+  - caption: Accessing data
     chapters:
     - file: accessing_data       
-  - caption: Computations with large datasets
+  - caption: Computations
     chapters:
     - file: computations     
   - caption: Available tools
