changed chunking title and added ML file

--- a/BigData/_toc.yml
+++ b/BigData/_toc.yml
@@ -27,6 +27,7 @@ parts:
     - file: computations/computations 
     - file: computations/chunking    
     - file: computations/time_axis    
+    - file: computations/machine-learning    
   - caption: Software 
     chapters:
     - file: software/software-intro.md   
