--- a/BigData/_toc.yml
+++ b/BigData/_toc.yml
@@ -4,13 +4,10 @@ parts:
   - caption: Large-scale climate data
     chapters:
     - file: data/data-intro.md
-    - file: data/data-chunking.md
+    - file: data/data-structure.md
     - file: data/data-format.md
-    - file: data/data-metadata.md
-    - file: data/homeless.md
-      sections:
-      - file: data/data-troubleshooting.md
-      - file: data/nczarr_test.md
+    - file: data/data-netcdf.md
+    - file: data/data-zarr.md
   - caption: Large-scale data analysis
     chapters:
     - file: computations/computations-intro.md
